--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -19,7 +19,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/slightdarkblue"
-                android:src="@drawable/back"
+                android:src="@drawable/icons8_back"
                 android:id="@+id/back2_fab"
                 android:elevation="1dp"
                 android:layout_marginLeft="18dp"
