--- a/app/src/main/res/layout/user_bubble.xml
+++ b/app/src/main/res/layout/user_bubble.xml
@@ -15,5 +15,15 @@
         android:layout_alignParentRight="true"
         android:background="@drawable/user_bubble"
         android:text="hey world"/>
+    <TextView
+        android:id="@+id/current_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10:23"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/user_message"
+        android:layout_marginRight="23dp"
+        android:textSize="14sp"/>
 
 </RelativeLayout>
