--- a/app/src/main/res/layout/activity_change_profile.xml
+++ b/app/src/main/res/layout/activity_change_profile.xml
@@ -8,37 +8,37 @@
     tools:context=".ChangeProfileActivity">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/back_fab_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/slightdarkblue"
-        android:src="@drawable/back"
-        android:id="@+id/back_fab_profile"
-        android:elevation="1dp"
         android:layout_marginLeft="18dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/slightdarkblue"
+        android:elevation="1dp"
+        android:src="@drawable/icons8_back" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="60dp"
         android:layout_marginLeft="10dp"
         android:src="@drawable/hospital"
         android:id="@+id/profile_image_view"
         android:layout_centerHorizontal="true"/>
+
     <TextView
+        android:id="@+id/change_profile_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_medium"
         android:layout_below="@+id/profile_image_view"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/poppins_medium"
+        android:gravity="center_horizontal"
         android:text="@string/changep"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:layout_marginTop="20dp"
-        android:gravity="center_horizontal"
-        android:layout_centerInParent="true"
-        android:textSize="20sp"
-        android:id="@+id/change_profile_id"
-        />
+        android:textSize="16sp" />
     <RelativeLayout
         android:layout_width="350dp"
         android:layout_centerInParent="true"
@@ -46,8 +46,8 @@
         android:layout_below="@+id/change_profile_id"
         android:layout_marginTop="30dp">
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_baseline_person_24"
             app:tint="#0B0909"
@@ -63,15 +63,16 @@
             android:layout_marginLeft="30dp"
             android:textSize="20sp"
             android:textColor="@color/black"/>
+
         <ImageView
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_toRightOf="@+id/Profile_name_text"
-            android:layout_toEndOf="@+id/Profile_name_text"
+            android:id="@+id/edit_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/Profile_name_text"
+            android:layout_toRightOf="@+id/Profile_name_text"
             android:src="@drawable/ic_baseline_edit_24"
-            app:tint="#0B0909"
-            android:id="@+id/edit_id"/>
+            app:tint="#0B0909" />
 
     </RelativeLayout>
 </RelativeLayout>
