--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:backgroundTint="@color/slightdarkblue"
-             android:src="@drawable/back"
+             android:src="@drawable/icons8_back"
              android:id="@+id/back3_fab"
              android:elevation="1dp"
              android:layout_marginLeft="18dp"
@@ -54,22 +54,23 @@
             android:backgroundTint="@color/lightblue"
             android:background="@drawable/blue_border_rounded_cornwe"
             >
+
             <Button
+                android:id="@+id/sign_in"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/sign_in"
-                android:text="@string/sign_in"
-                android:textColor="@color/black"
+                android:layout_marginRight="30dp"
                 android:layout_toRightOf="@+id/signin_icon"
                 android:background="@android:color/transparent"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_regular"
                 android:maxLines="1"
                 android:paddingLeft="17dp"
                 android:paddingTop="15dp"
                 android:paddingBottom="15dp"
-                android:layout_marginRight="30dp"
-                android:textSize="15sp"
-                android:elevation="5dp"/>
+                android:text="@string/sign_in"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
@@ -133,7 +134,7 @@
                 android:id="@+id/google"
                 android:elevation="1dp"
                 android:backgroundTint="@color/lightblue"
-                android:layout_marginLeft="140dp"
+                android:layout_marginLeft="120dp"
                 android:layout_marginRight="20dp"
                 />
             <com.google.android.material.floatingactionbutton.FloatingActionButton
