--- a/app/src/main/res/layout/activity_otp_acticity.xml
+++ b/app/src/main/res/layout/activity_otp_acticity.xml
@@ -15,13 +15,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/slightdarkblue"
-            android:src="@drawable/back"
+            android:src="@drawable/icons8_back"
             android:id="@+id/otp_fab"
             android:elevation="1dp"
             android:layout_marginLeft="18dp"
             android:layout_marginTop="20dp"/>
       <com.airbnb.lottie.LottieAnimationView
-          android:layout_width="200dp"
+          android:layout_width="wrap_content"
           android:layout_height="190dp"
           android:layout_marginTop="30dp"
           app:lottie_rawRes="@raw/otpgif"
@@ -67,6 +67,7 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="62dp"
+        android:id="@+id/ver_id"
         android:layout_below="@+id/pinview"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
@@ -99,5 +100,13 @@
             android:layout_centerVertical="true"
             android:src="@drawable/verify_icon"/>
     </RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="9dp"
+        android:id="@+id/resend_code"
+        android:layout_below="@+id/ver_id"
+        android:text="Didn't receive code? Resend it"/>
 
 </RelativeLayout>
