--- a/app/src/main/res/layout/infomation_recycled.xml
+++ b/app/src/main/res/layout/infomation_recycled.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="210dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
     android:layout_margin="7dp"
-    android:id="@+id/phone_Cardview"
+    android:id="@+id/facts_Cardview"
     app:cardElevation="6dp">
 
     <RelativeLayout
         android:id="@+id/background_color"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/cultured"
+        android:background="@color/lightblue"
         android:padding="5dp">
 
 
@@ -23,22 +23,21 @@
             android:layout_height="252dp" />
 
         <TextView
-            android:id="@+id/phone_title"
+            android:id="@+id/facts_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
             android:layout_marginStart="-6dp"
+            android:layout_marginLeft="-6dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="24dp"
             android:layout_toRightOf="@+id/phone_image"
             android:text="COVID-19"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="50dp"
-            android:textSize="25sp"
             android:textColor="@color/black"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="-6dp"
-            android:layout_marginRight="24dp" />
+            android:textSize="25sp" />
 
 
     </RelativeLayout>
