--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -14,18 +14,18 @@
         android:layout_height="90dp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
-        android:src="@drawable/hospital"
-        android:id="@+id/image_view"
+        android:src="@drawable/user123"
+        android:id="@+id/user_image_view"
         android:layout_centerVertical="true"/>
     
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/profile_name"
-        android:layout_toRightOf="@+id/image_view"
+        android:layout_toRightOf="@+id/user_image_view"
         android:layout_marginLeft="30dp"
         android:layout_centerVertical="true"
-        android:text="Ndei"
+        android:text="User"
         android:textColor="@color/black"
         android:textSize="17sp"
         android:fontFamily="@font/poppins_medium"/>
